Closed Bug 215777 Opened 22 years ago Closed 21 years ago

Labels and mail status is cleared when moving mails between folders using IMAP.

Categories

(MailNews Core :: Networking: IMAP, defect)

defect
Not set
major

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: nagypalg, Assigned: Bienvenu)

References

Details

(Whiteboard: fixed-aviary1.0)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; rv:1.4) Gecko/20030624 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; rv:1.4) Gecko/20030624 We use an Exchange Server which I access with Mozilla using IMAP (secured SSL accesss). When I move a mail between folders both labels (Later, Important etc.) and mail status (Read, Forwarded, Reply etc.) are reset which is very annoying. Moreover, even spam status is cleared, i.e. all of my spam mails, which are identified via Mozilla as such, and moved to my spam folder automatically loose their spam mark. With POP3 accounts labels, status and spam-status are not cleared. Reproducible: Always Steps to Reproduce: 1. Set a label on a mail, or reply to a mail, or set spam-status 2. Move the mail to another folder. Actual Results: All of the meta-information is lost. Expected Results: As in POP3 case, keep the metadata.
WFM using 2003080304 WinXP.
Tried with mozilla 1.5beta and also with non-exchange IMAP server (imap.web.de), but still does not work. All of the additional info is lost when I move a mail between IMAP folders. Perhaps it is a Win2k specific issue if it really works for WinXP?
your imap server isn't supporting user-defined keywords, which is where we store this information.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Is there a list of imap servers somewhere which are compatible with Mozilla Mail? If my IMAP server does not support user-defined keywords, how do they stored until I do not move mails between folders (those info remains there persistently)? Where those keywords are stored then? In .msf files? Isn't it possible to store them there even when you move mails between folders? Does it mean that Mozilla will never work with MS Exchange Server (and other server which are not "Mozilla-compatible"? The present situation (at moving all of the info lost, even reply status and attachment info, which are quite standard stuff) renders Mail almost unusable with those servers.
Depends on: 224519
I believe this is a dup - it should be fixed now.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → WORKSFORME
It still does not work for me (Mozilla 1.6 on Win 2000). I tried it with our corporate exchange server, and with web.de IMAP (uses Linux as far as I am concerned). With POP3 accounts it works OK, but with IMAP accounts labels are lost. In the header of IMAP I do not see any X-Mozilla-Status tags, where label information should be stored. (In POP3 mails I see the headers.) Could someone give me the name a (possibly free) mail provider, where IMAP access was succesfully tested with Mozilla? Then I could test it also to make sure that it is an IMAP server problem.
Status: RESOLVED → REOPENED
Resolution: WORKSFORME → ---
IMAP doesn't use x-mozilla-status headers; we use imap keywords. If your server doesn't support IMAP user-defined keywords, things get trickier but we do attempt to handle it, at least locally to one machine (we can't handle it across client machines, obviously, if the server doesn't support IMAP user-defined keywords). I believe fastmail.fm does support user defined keywords but I'd have to shut down to make sure.
-> all/all as i'm seeing this on Mac OS X. is this a dupe of bug 189016?
OS: Windows 2000 → All
Hardware: PC → All
*** Bug 189016 has been marked as a duplicate of this bug. ***
ah, junk status is maintained, but labels are not. I need to extend the same trick I did for junk status to labels, for those imap servers that don't support user-defined keywords.
Attached patch fix for labelsSplinter Review
this makes it so labels will be kept if you copy a message with a label set to an imap server that doesn't support user defined keywords.
Attachment #148909 - Flags: superreview?(mscott)
Attachment #148909 - Flags: superreview?(mscott) → superreview+
fixed
Status: REOPENED → RESOLVED
Closed: 22 years ago21 years ago
Resolution: --- → FIXED
Whiteboard: fixed-aviary1.0
Okay, now it works to move labeled message *to* the IMAP server, but not *to* local folders. Was that excluded on purpose?
Product: MailNews → Core
*** Bug 237378 has been marked as a duplicate of this bug. ***
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: