Port

Bug #215777 --> Labels and mail status is cleared when moving mails between folders using IMAP servers that
don't support custom keywords.