mozilla/mailnews/imap/src/nsImapMailFolder.cpp
@@ -6486,6 +6486,7 @@ nsImapMailFolder::CopyMessages(nsIMsgFolder* srcFolder,
         nsCOMPtr <nsIMsgDBHdr> msgDBHdr = do_QueryElementAt(messages, i, &rv);
         if (mDatabase && msgDBHdr)
         {
+          nsMsgLabelValue label;
           nsXPIDLCString junkScore, junkScoreOrigin;
           msgDBHdr->GetStringProperty("junkscore", getter_Copies(junkScore));
           msgDBHdr->GetStringProperty("junkscoreorigin", getter_Copies(junkScoreOrigin));
@@ -6493,6 +6494,13 @@ nsImapMailFolder::CopyMessages(nsIMsgFolder* srcFolder,
             mDatabase->SetAttributesOnPendingHdr(msgDBHdr, "junkscore", junkScore.get(), 0);
           if (!junkScoreOrigin.IsEmpty())
             mDatabase->SetAttributesOnPendingHdr(msgDBHdr, "junkscoreorigin", junkScore.get(), 0);
+          msgDBHdr->GetLabel(&label);
+          if (label != 0)
+          {
+            nsCAutoString labelStr;
+            labelStr.AppendInt(label);
+            mDatabase->SetAttributesOnPendingHdr(msgDBHdr, "label", labelStr.get(), 0);
+          }
         }
       }
    }
